tests/snapshots/integration__integration_tests__post_start_commands__execute_with_post_start.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
    - "--execute"
    - "echo 'Execute flag' > execute.txt"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp78KaQw/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mStarting (background):[0m
[40m [0m echo 'Background task' > background.txt

✅ [32mCreated new worktree for [1m[32mfeature[0m at [REPO].feature[0m

----- stderr -----
